# Automation

./: original.py  pyproject.toml
common/: conftest.py  device.yml
page/: base_page.py  login_page.py
steps/: login_action.py
tests/: account_login_test.py
